<resources>
    <string name="app_name">StartApp</string>
    <string name="install">INSTALL</string>
    <string name="add_your_app_and_get_new_users">ADD YOUR APP AND GET NEW USERS!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="need_a_new_account">Need a new account?</string>
    <string name="user_name">User Name</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="create_account">Create account</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="login_with_your_e_mail_and_password">Login with your e-mail and password</string>
    <string name="e_mailLogin">e-mail</string>
    <string name="profile">Profile</string>
    <string name="change_password">Change password</string>
    <string name="your_apps">Your apps</string>
    <string name="your_profile_and_apps">Your profile and apps</string>
    <string name="your_old_password">Your old password</string>
    <string name="your_new_password">Your new password</string>
    <string name="change">Change</string>
    <string name="change_e_mail">Change e-mail</string>
    <string name="your_old_e_mail">Your old e-mail</string>
    <string name="your_new_e_mail">Your new e-mail</string>
    <string name="your_curren_password">Your current password</string>
    <string name="choose_color">Choose bar color</string>
    <string name="submit_app">SUBMIT APP</string>
    <string name="do_you_really_want_to_delete_the_app">Do you really want to delete the app?</string>
    <string name="delete">Delete</string>
    <string name="app_avatar">App avatar</string>
    <string name="detailed_description">Detailed Description</string>
    <string name="add_your_app">Add your app!</string>
    <string name="tap_android_icon_to_choose_the_avatar_of_your_app">Tap Android icon to choose the avatar of your App.</string>
    <string name="browse_as_an_anonymous_user">Browse as anonymous user</string>
    <string name="being_a_anonymous">By browsing as anonymous user you are entitled to see nearly full content of the app. Being an anonymous user means, that you can not rate other users apps and can not add your own Apps to the StartApp Store. You can always register yourself and add your app to the store while being an anonymous user. Happy Browsing!</string>
    <string name="always_login_as_anonymous_user">Always login as anonymous user</string>
    <string name="let_s_go">Let\'s go!</string>
    <string name="hey_there_buddy_just_in_case_you_are_interested_in_posting_your_own_app_register_using_same_e_mail_you_provided_in_you_google_developer_account">Hey there buddy! Just in case you are interested in posting your own app, register using same e-mail you provided in you Google developer account. It will be easier for us to contact you later if a any problem appears. </string>
    <string name="choose_titel_color">Choose titel color</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_account">My account</string>
    <string name="if_updated_avatar_is_not_visible_instantly_after_submitting_the_update_clear_your_cache">If updated avatar is not visible instantly after submitting the update, clear your cache.</string>
    <string name="about_us">About us!</string>
    <string name="bacl">BACK</string>
    <string name="start_app_v1_0_n_clake_studio_2017">Start App v1.0\n cLake studio 2017</string>
    <string name="art_and_design"><![CDATA[Art & Design]]></string>
    <string name="auto_and_vehicles"><![CDATA[Auto & Vehicles]]></string>
    <string name="beauty">Beauty</string>
    <string name="books_and_reference"><![CDATA[Books & Reference]]></string>
    <string name="buisness">Business</string>
    <string name="comics">Comics</string>
    <string name="communications">Communications</string>
    <string name="dating">Dating</string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="events">Events</string>
    <string name="finance">Finance</string>
    <string name="food_and_dring"><![CDATA[Food & Drink]]></string>
    <string name="health_and_fitness"><![CDATA[Health & Fitness]]></string>
    <string name="libraries_and_demo"><![CDATA[Libraries & Demo]]></string>
    <string name="lifestyle">Lifestyle</string>
    <string name="maps_and_navigation"><![CDATA[Maps & Navigation]]></string>
    <string name="medical">Medical</string>
    <string name="music_and_audio"><![CDATA[Music & Audio]]></string>
    <string name="news_and_magazines"><![CDATA[News & Magazines]]></string>
    <string name="parenting">Parenting</string>
    <string name="personalization">Personalization</string>
    <string name="photography">Photography</string>
    <string name="productivity">Productivity</string>
    <string name="shopping">Shopping</string>
    <string name="social">Social</string>
    <string name="sports">Sports</string>
    <string name="tools">Tools</string>
    <string name="travel_and_local"><![CDATA[Travel & Local]]></string>
    <string name="vide_players_and_editors"><![CDATA[Video Players & Editors]]></string>
    <string name="weather">Weather</string>
    <string name="game_action">Games:Action</string>
    <string name="game_adventure">Games:Adventure</string>
    <string name="game_arcade">Games:Arcade</string>
    <string name="game_board">Games:Board</string>
    <string name="game_card">Games:Card</string>
    <string name="game_casino">Games:Casino</string>
    <string name="game_casual">Games:Casual</string>
    <string name="game_educational">Games:Educational</string>
    <string name="game_music">Games:Music</string>
    <string name="game_puzzle">Games:Puzzle</string>
    <string name="game_racing">Games:Racing</string>
    <string name="game_role_playing">Games:Role Playing</string>
    <string name="game_simulation">Games:Simulation</string>
    <string name="game_sports">Games:Sports</string>
    <string name="game_strategy">Games:Strategy</string>
    <string name="game_trivia">Games:Trivia</string>
    <string name="game_word">Games:Word</string>
    <string name="declare_title_of_your_arr_first">Declare title of your app first!</string>
    <string name="avatar_added_remember_to_tap_submit_after">Avatar added, remember to tap submit after filling other properties</string>
    <string name="permission_granted">Permission Granted!</string>
    <string name="permission_not_granted">Permission not Granted :(</string>
    <string name="edit_app_properties">Edit app\'s properties</string>
    <string name="edit_text_color">Edit text color</string>
    <string name="edit_color">Edit color</string>
    <string name="submit_edit">Submit edit</string>
    <string name="updating_data">Updating data</string>
    <string name="privacy_uri">https://privacypolicyclake.blogspot.com/2017/09/startapp-privacy-policy.html</string>
    <string name="invalid_email_or_password">Invalid email/password lenght must be greater than 0</string>
    <string name="loggin_in">Loggin in</string>
    <string name="logged_in">Logged in</string>
    <string name="something_went_wrong">Something went wrong :(</string>
    <string name="wed_advise_to_search_one_particular">We advise to search one particular functions/ delete space</string>
    <string name="search_is_empty_or_does_not_contain">Search is empty/does not contain #hashtag</string>
    <string name="anonymous_users_can_not_view_account">Anonymous users can not view account</string>
    <string name="log_in_to_view_account">Log in to view account</string>
    <string name="create_an_account_log_in_firts">Create an account/log in first</string>
    <string name="long_click_on_avatar_to_delete_it">LongClick on avatar to delete it, tap to edit properties</string>
    <string name="password_changed">Password changed</string>
    <string name="something_went_wrong_with_changing_password">Something went wrong with changing password</string>
    <string name="unable_to_authenticate">Unable to authenticate</string>
    <string name="you_are_not_logged_in">You are not logged in</string>
    <string name="user_logged_out">User logged out</string>
    <string name="email_changed">E-mail changed</string>
    <string name="something_went_wrong_with_chaning_email">Something went wrong with changing e-mail</string>
    <string name="email_is_empty">E-mail is empty</string>
    <string name="email_does_not_contain">E-mail does not contain @ sign</string>
    <string name="empty_password">Empty password</string>
    <string name="password_must_be_longer_than">Password must be longer than 8 signs</string>
    <string name="user_registered">User registered</string>
    <string name="app_removed">App removed</string>
    <string name="by_tapping_button_named_let_s_go_you_agree_to_our_terms_of_services_and_privacy_policy">By tapping button named \'let\'s go\' you agree to our terms of services and privacy policy!</string>
    <string name="privacy_policy_upper_case">PRIVACY POLICY</string>
    <string name="search_exact_function">search exact #function</string>
    <string name="you_haven_t_added_any_apps_yet">You haven\'t added any apps yet :(</string>
    <string name="by_tapping_button_named_create_account_you_agree_to_our_terms_of_services_and_privacy_policy">By tapping button named \'create account\' you agree to our terms of services and privacy policy!</string>
    <string name="titel_category_avatar">Titel/Category/Avatar</string>
    <string name="titel_of_your_app">Titel of your App</string>
    <string name="info_package_color">Info/Package/Color</string>
    <string name="short_description_should_contain_hashtags_to_poing_out_key_functions_of_your_app">Short description should contain #hashtags to poing out key functions of your app</string>
    <string name="small_description_of_your_app">Small description of your app</string>
    <string name="just_copy_paste_your_description_from_google_play_store">Just copy/paste your description from Google Play Store</string>
    <string name="detail_description_of_your_app">Detail description of your app</string>
    <string name="package_name_of_your_app_example_com_clakestudio_pc_startapp">Package name of your app example: com.clakestudio.pc.startapp</string>
    <string name="name_of_your_package">name of your package</string>
    <string name="by_hitting_submit_your_app_will_be_posted_on_startapp_store_but_do_not_worry_you_can_edit_everything_later_from_your_account">By hitting submit your app will be posted on StartApp Store, but do not worry, you can edit everything later from your Account</string>
    <string name="health">Health</string>
    <string name="aa">aa</string>
    <string name="aa">aa</string>
    <string name="like">like</string>
</resources>
