<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:id="@+id/app_bar_layout"
        >

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:title=""

            android:id="@+id/toolbar">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profileTextView"
                android:textColor="#FFFFFF"
                android:textSize="20sp"

                android:text="@string/profile"
                android:layout_marginRight="10dp"
                android:textAlignment="center"
                android:gravity="left"/>



        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/your_curren_password"
            android:id="@+id/editTextCurrenPassword"
            android:layout_margin="@dimen/card_margin_side"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_old_e_mail"
            android:inputType="textEmailAddress"
            android:id="@+id/editTextOldEmail"
            android:layout_margin="@dimen/card_margin_side"/>

        <EditText
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/your_new_e_mail"
            android:layout_height="wrap_content"
            android:id="@+id/editTextNewEmail"
            android:layout_margin="@dimen/card_margin_side"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFFFFF"
            android:id="@+id/dialogChangeEmail"
            android:text="@string/change"
            android:layout_gravity="end"/>



    </LinearLayout>



</LinearLayout>
