<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="147dp"
        android:background="#2196F3"
        android:padding="10dp"
        android:text="@string/need_a_new_account"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/log_in"
        android:textColor="#000000" />

    <Button
        android:id="@+id/buttonBrowse"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/buttonRegister"
        android:layout_marginBottom="66dp"
        android:background="@color/colorPrimary"
        android:padding="10dp"
        android:text="@string/browse_as_an_anonymous_user"
        android:textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/grafika_back" />
</RelativeLayout>