<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginToolbar">



            </android.support.v7.widget.Toolbar>




        </android.support.design.widget.AppBarLayout>




    </android.support.design.widget.CoordinatorLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <TextView
            android:text="@string/login_with_your_e_mail_and_password"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:textSize="20sp"
            android:typeface="normal"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewInfo"
            android:layout_weight="1" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/editTextLoginEmail"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/editTextLoginPassword"
            android:layout_weight="1" />

        <Button
            android:text="@string/log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:id="@+id/buttonLogIn" />


    </LinearLayout>

</LinearLayout>