<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_anonymus_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clakestudio.pc.startapp.AnonymusUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </android.support.v7.widget.Toolbar>


        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/being_a_anonymous"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/card_margin_side"
            android:layout_marginRight="@dimen/card_margin_side"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark" />
        </LinearLayout>


        <Button
            android:id="@+id/buttonProcced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimary"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/let_s_go"
            android:textColor="@color/colorAccent"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="#2196F3"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#2196F3" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/by_tapping_button_named_let_s_go_you_agree_to_our_terms_of_services_and_privacy_policy"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/buttonPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin_side"
            android:background="#2196F3"
            android:text="@string/privacy_policy_upper_case"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

</ScrollView>
