<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">





<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registerToolbar">


        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_vertical_margin">



        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail"
            android:ems="10"
            android:id="@+id/editTextEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:hint="@string/password"
            android:ems="10"
            android:id="@+id/editTextPassword" />


        <Button
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:id="@+id/buttonCreateAccount" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:background="#2196F3">

            <Space
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#2196F3"
                />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PRIVACY POLICY"
            android:layout_margin="@dimen/card_margin_side"
            android:textColor="@color/colorAccent"
            android:id="@+id/buttonPrivacy"
            android:background="#2196F3"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginLeft="@dimen/card_margin_side"
            android:layout_marginRight="@dimen/card_margin_side"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/hey_there_buddy_just_in_case_you_are_interested_in_posting_your_own_app_register_using_same_e_mail_you_provided_in_you_google_developer_account"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/card_margin_side"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="By tapping button named 'create account' you agree to our terms of services and privacy policy!"/>




    </LinearLayout>



</LinearLayout>

</ScrollView>